--- a/src/main/resources/com/example/tictactoe/main-view.fxml
+++ b/src/main/resources/com/example/tictactoe/main-view.fxml
@@ -5,23 +5,29 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="ancor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tictactoe.controller.MainController">
-   <children>
-      <VBox fx:id="LVBox" minWidth="-Infinity" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <VBox fx:id="RVBox" minWidth="-Infinity" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <VBox alignment="CENTER" layoutX="395.0" layoutY="115.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="395.0" AnchorPane.rightAnchor="395.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <HBox fx:id="UpFieldHBox" prefHeight="100.0" prefWidth="200.0" />
-            <Pane fx:id="GameField" layoutX="440.0" layoutY="135.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" style="-fx-background-color: RED;" AnchorPane.bottomAnchor="135.0" AnchorPane.leftAnchor="440.0" AnchorPane.rightAnchor="390.0" AnchorPane.topAnchor="135.0" />
-            <HBox fx:id="DownFieldHBox" prefHeight="100.0" prefWidth="200.0" />
-         </children>
-      </VBox>
-      <Button fx:id="bbb" layoutX="300.0" layoutY="65.0" mnemonicParsing="false" onAction="#onClk" text="Button" />
-      <Text fx:id="t1" layoutX="219.0" layoutY="417.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="140" />
-      <Text fx:id="t2" layoutX="219.0" layoutY="455.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="140" />
-      <Text fx:id="t3" layoutX="219.0" layoutY="493.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="140" />
-   </children>
+<AnchorPane fx:id="ancor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/16"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tictactoe.controller.MainController">
    <padding>
-      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
    </padding>
+   <VBox fx:id="LVBox" minWidth="-Infinity" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0"
+         AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+   <VBox fx:id="RVBox" minWidth="-Infinity" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0"
+         AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+   <VBox alignment="CENTER" layoutX="395.0" layoutY="115.0" AnchorPane.bottomAnchor="0.0"
+         AnchorPane.leftAnchor="395.0" AnchorPane.rightAnchor="395.0" AnchorPane.topAnchor="0.0">
+      <HBox fx:id="UpFieldHBox" prefHeight="100.0" prefWidth="200.0"/>
+      <Pane fx:id="GameField" layoutX="440.0" layoutY="135.0" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="500.0" prefWidth="500.0" AnchorPane.bottomAnchor="135.0" AnchorPane.leftAnchor="440.0"
+            AnchorPane.rightAnchor="390.0" AnchorPane.topAnchor="135.0"/>
+      <HBox fx:id="DownFieldHBox" prefHeight="100.0" prefWidth="200.0"/>
+   </VBox>
+   <Button fx:id="bbb" layoutX="300.0" layoutY="65.0" mnemonicParsing="false" onAction="#onClk" text="Button"/>
+   <Text fx:id="t1" layoutX="219.0" layoutY="417.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text"
+         wrappingWidth="140"/>
+   <Text fx:id="t2" layoutX="219.0" layoutY="455.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text"
+         wrappingWidth="140"/>
+   <Text fx:id="t3" layoutX="219.0" layoutY="493.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text"
+         wrappingWidth="140"/>
 </AnchorPane>
