--- a/src/main/resources/com/example/tictactoe/singin-view.fxml
+++ b/src/main/resources/com/example/tictactoe/singin-view.fxml
@@ -7,7 +7,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="APMain" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="356.0" prefWidth="216.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tictactoe.controller.LogInView">
+<AnchorPane fx:id="APMain" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="356.0" prefWidth="216.0" xmlns="http://javafx.com/javafx/8"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tictactoe.controller.SingIn">
    <children>
       <Button fx:id="BSingin" layoutX="52.0" layoutY="279.0" mnemonicParsing="false" onAction="#OnBSingin" prefHeight="46.0" prefWidth="112.0" text="SingIn" />
       <Label layoutX="14.0" layoutY="14.0" text="Login" />
