--- a/src/main/resources/com/example/tictactoe/mainHBox-view.fxml
+++ b/src/main/resources/com/example/tictactoe/mainHBox-view.fxml
@@ -6,19 +6,19 @@
 
 <HBox fx:id="mainHBox" minHeight="600.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tictactoe.controller.MainHBox">
    <children>
-      <VBox fx:id="LVBox" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: RED;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox fx:id="LVBox" minHeight="-Infinity" minWidth="-Infinity"  AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <padding>
             <Insets left="10.0" right="-10.0" top="20.0" />
          </padding>
       </VBox>
-      <VBox alignment="CENTER" layoutX="395.0" layoutY="115.0" style="-fx-background-color: GREEN;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="395.0" AnchorPane.rightAnchor="395.0" AnchorPane.topAnchor="0.0">
+      <VBox alignment="CENTER" layoutX="395.0" layoutY="115.0"  AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="395.0" AnchorPane.rightAnchor="395.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox fx:id="UpFieldHBox" minHeight="-Infinity" style="-fx-background-color: PURPLE;" />
-            <Pane fx:id="GameField" layoutX="440.0" layoutY="135.0" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: ORANGE;" AnchorPane.bottomAnchor="135.0" AnchorPane.leftAnchor="440.0" AnchorPane.rightAnchor="390.0" AnchorPane.topAnchor="135.0" />
-            <HBox fx:id="DownFieldHBox" minHeight="-Infinity" style="-fx-background-color: YELLOW;" />
+            <HBox fx:id="UpFieldHBox" minHeight="-Infinity"  />
+            <Pane fx:id="GameField" layoutX="440.0" layoutY="135.0" minHeight="-Infinity" minWidth="-Infinity" AnchorPane.bottomAnchor="135.0" AnchorPane.leftAnchor="440.0" AnchorPane.rightAnchor="390.0" AnchorPane.topAnchor="135.0" />
+            <HBox fx:id="DownFieldHBox" minHeight="-Infinity"  />
          </children>
       </VBox>
-      <VBox fx:id="RVBox" alignment="TOP_RIGHT" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: BLUE;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox fx:id="RVBox" alignment="TOP_RIGHT" minHeight="-Infinity" minWidth="-Infinity" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <HBox.margin>
             <Insets />
          </HBox.margin>
