--- a/src/main/resources/com/example/tictactoe/login-view.fxml
+++ b/src/main/resources/com/example/tictactoe/login-view.fxml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-
-<AnchorPane fx:id="APMain" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="233.0" prefWidth="384.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tictactoe.controller.LogIn">
-   <Button fx:id="BSingin" layoutX="196.0" layoutY="175.0" mnemonicParsing="false" onAction="#OnBSingin" prefHeight="46.0" prefWidth="112.0" text="SingIn" />
-   <Label layoutX="9.0" layoutY="14.0" text="Login" />
-   <Label layoutX="9.0" layoutY="92.0" text="Password" />
-   <TextField fx:id="TFLogin" layoutX="9.0" layoutY="47.0" promptText="Cat2000" />
-   <TextField fx:id="TFPass" layoutX="9.0" layoutY="122.0" promptText="qwerty_0" />
-   <Button fx:id="BLogin" layoutX="46.0" layoutY="175.0" mnemonicParsing="false" onAction="#OnBLogin" prefHeight="46.0" prefWidth="112.0" text="Login" />
-   <Text fx:id="TError" layoutX="209.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="JUSTIFY" wrappingWidth="132.6708984375" />
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
+<AnchorPane fx:id="APMain" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="233.0" prefWidth="384.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.tictactoe.controller.LogIn">
+   <Button fx:id="BSingin" layoutX="196.0" layoutY="175.0" mnemonicParsing="false" onAction="#OnBSingin"
+           prefHeight="46.0" prefWidth="112.0" text="SingIn"/>
+   <Label layoutX="9.0" layoutY="14.0" text="Login"/>
+   <Label layoutX="9.0" layoutY="92.0" text="Password"/>
+   <TextField fx:id="TFLogin" layoutX="9.0" layoutY="47.0" promptText="Cat2000"/>
+   <TextField fx:id="TFPass" layoutX="9.0" layoutY="122.0" promptText="qwerty_0"/>
+   <Button fx:id="BLogin" layoutX="46.0" layoutY="175.0" mnemonicParsing="false" onAction="#OnBLogin" prefHeight="46.0"
+           prefWidth="112.0" text="Login"/>
+   <Text fx:id="TError" layoutX="209.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="JUSTIFY"
+         wrappingWidth="132.6708984375"/>
 </AnchorPane>
